--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "socket.io": "~1.3.0",
     "underscore": "~1.7.0",
     "xmldom": "^0.1.27"
+  },
+  "scripts": {
+    "start": "node app.js"
   }
 }
